fixes after review

--- a/src/index.html
+++ b/src/index.html
@@ -12,24 +12,25 @@
       <fieldset class="fieldset">
         <legend>Personal information</legend>
         <div class="form1">
-          <label for="surname">
+          <label>
             Surname:
-            <input type=
-            "text" 
-            name="surname"
-            autocomplete="off">
+            <input
+             type="text" 
+             name="surname"
+             autocomplete="off">
           </label>
         </div>
         <div class="form1">
-          <label for="name">
+          <label>
             Name:
-            <input type="text" 
+            <input 
+            type="text" 
             name="name"
             autocomplete="off">
           </label>
         </div>
         <div class="form1">
-          <label for="age">
+          <label>
             How old are You?
             <input 
               type="number" 
@@ -40,14 +41,15 @@
           </label>
         </div>
         <div class="form1">
-          <label for="date">
+          <label>
             Full date of birth:
-            <input type="date" 
+            <input 
+            type="date" 
             name="date">
           </label>
         </div>
         <div class="form1">
-          <label for="box">
+          <label>
             I accept the term of the agreement
             <input type=
             "checkbox" 
@@ -58,10 +60,10 @@
       <fieldset class="fieldset">
         <legend>Registration</legend>
         <div class="form1">
-          <label for="mail">
+          <label>
             E-mail:
-            <input type=
-            "email" 
+            <input 
+            type="email" 
             placeholder="email@example.com"
             autocomplete="off"
             name="mail" 
@@ -69,7 +71,7 @@
           </label>
         </div>
         <div class="form1">
-          <label for="password">
+          <label>
             Password:
             <input 
             type="password" 
@@ -83,7 +85,7 @@
       <fieldset class="fieldset">
         <legend>An interesting fact about you!</legend>
         <div class="form1">
-          <label for="contact">
+          <label>
             Do you love cats?
           </label>
           <input 
@@ -104,19 +106,22 @@
           </label>
         </div>
         <div class="form1">
-          What is your favorite color?
-          <input type="color" name="color">
+          <label>What is your favorite color?
+            <input 
+            type="color" 
+            name="color">
+          </label>
         </div>
         <div class="form1">
-          <label for="name">
+          <label>
             What time do you go to bed?
-            <input type=
-            "time" 
+            <input 
+            type="time" 
             name="time">
           </label>
         </div> 
         <div class="form1">
-          <label for="Cars">
+          <label>
             What are your favorite brand of cars?
             <select 
               class="select" 
@@ -131,10 +136,10 @@
           </label>
         </div>
         <div class="form1">
-          <label for="range">
+          <label>
             How do you rate our work?
-            <input type=
-            "range" 
+            <input 
+            type="range" 
             name="range"
             value="0" 
             >
@@ -144,7 +149,7 @@
       <fieldset class="fieldset">
         <legend>Additional info:</legend>
         <div class="form1">
-          <label for="textarea">
+          <label>
             Comments:
             <textarea 
               name="textarea" 
@@ -153,7 +158,7 @@
           </label>
         </div>
         <div class="form1">
-          <label for="feedback">
+          <label for="recommendation">
             Would you recommend us?
             <select name="recommendation">
               <option value="yes">yes</option>
