fixed last version

--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,20 @@
           <label>
             Surname:
             <input
-             type="text" 
-             name="surname"
-             autocomplete="off">
+              type="text" 
+              name="surname"
+              autocomplete="off"
+            >
           </label>
         </div>
         <div class="form1">
           <label>
             Name:
             <input 
-            type="text" 
-            name="name"
-            autocomplete="off">
+              type="text" 
+              name="name"
+              autocomplete="off"
+            >
           </label>
         </div>
         <div class="form1">
@@ -37,15 +39,17 @@
               name="age"
               min="1" 
               max="100"
-              value="12">
+              value="12"
+            >
           </label>
         </div>
         <div class="form1">
           <label>
             Full date of birth:
             <input 
-            type="date" 
-            name="date">
+              type="date" 
+              name="date"
+            >
           </label>
         </div>
         <div class="form1">
@@ -63,22 +67,24 @@
           <label>
             E-mail:
             <input 
-            type="email" 
-            placeholder="email@example.com"
-            autocomplete="off"
-            name="mail" 
-            required>
+              type="email" 
+              placeholder="email@example.com"
+              autocomplete="off"
+              name="mail" 
+              required
+            >
           </label>
         </div>
         <div class="form1">
           <label>
             Password:
             <input 
-            type="password" 
-            name="password"
-            minlenght="4" 
-            maxlength="8" 
-            required>
+              type="password" 
+              name="password"
+              minlenght="4" 
+              maxlength="8" 
+              required
+            >
           </label>
         </div>
       </fieldset>
@@ -89,18 +95,20 @@
             Do you love cats?
           </label>
           <input 
-          type="radio" 
-          id="contactYes" 
-          name="contact" 
-          value="Yes">
+            type="radio" 
+            id="contactYes" 
+            name="contact" 
+            value="Yes"
+          >
           <label for="contactYes">
             Yes
           </label>
           <input 
-          type="radio" 
-          id="contactNo" 
-          name="contact" 
-          value="No">
+            type="radio" 
+            id="contactNo" 
+            name="contact" 
+            value="No"
+          >
           <label for="contactNo">
             No
           </label>
@@ -108,16 +116,18 @@
         <div class="form1">
           <label>What is your favorite color?
             <input 
-            type="color" 
-            name="color">
+              type="color" 
+              name="color"
+            >
           </label>
         </div>
         <div class="form1">
           <label>
             What time do you go to bed?
             <input 
-            type="time" 
-            name="time">
+              type="time" 
+              name="time"
+            >
           </label>
         </div> 
         <div class="form1">
@@ -139,9 +149,9 @@
           <label>
             How do you rate our work?
             <input 
-            type="range" 
-            name="range"
-            value="0" 
+              type="range" 
+              name="range"
+              value="0" 
             >
           </label>
         </div>
